--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-CN">
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312">
-<meta http-equiv="refresh" content="0.1;url=http://www.mgm0028.com/?p=3567100">
+<meta http-equiv="refresh" content="0.1;url=http://m4224.com/">
 <title></title>
 </head>
 <body>
